[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "wheel", "setuptools-scm"]

[project]
authors = [{ name = "EvATive7" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
dependencies = []
description = ""
name = "param-helper"
readme = "README.md"
requires-python = ">=3.6"
dynamic = ["version"]

[project.optional-dependencies]
dev = ["black", "isort", "flake8", "pytest", "pre-commit"]
build = ["build"]

# [project.scripts]
# helloworld = "hello_world:main" 

[project.urls]
"Homepage" = "https://github.com/EvATive7/param_helper"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["test"]

[tool.isort]
profile = "black"

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "node-and-date"

[tool.setuptools.package-dir]
"" = "src"
